Jython NEWS

Jython 2.5
  Bugs fixed (new numbering due to move to Roundup)
    - [ 1111 ] keyword arguments not supported on __import__
    - [ 1567212 ] Jython $py.class bytecode doesn't include the .py's mtime
    - [ 1024 ] Jython $py.class bytecode doesn't include the .py's mtime
    - [ 852818 ] Wrong error message when the second+ parameter to Java wrong
    - [ 1222877 ] duplicate keyword arguments
    - [ 1168 ] ast module not working
    - [ 1192 ] deserialization of Jython classes extending Java classes fails when called from Java
    - [ 1243 ] Running scripts from standalone jar with __run__.py broken
    - [ 1237 ] Asnycore does not seem to work in Jython 2.5 (b0 or b1)
    - [ 1257 ] Pickling (protocol 2) doesn't use overriden itervalues() on dict-derived classes
    - [ 1245 ] modjy passes HTTP headers as unicode objects to the WSGI app
    - [ 1258 ] select() semantics differ from CPython, causing pydoc HTTPd to fail
    - [ 1043 ] Special broadcast host address <broadcast> is not supported.
    - [ 1121 ] listening socket shutdown expects the wrong kind of socket
    - [ 1244 ] Problem letting system choose the port for binding UDP socket
    - [ 1241 ] Assignment to static variable shadows value
    - [ 1234 ] Java classes' MRO resolution can throw an NPE
    - [ 1231 ] 2.5b1 breaks XML DocumentBuilderFactory (in particular, Weblogic 10.3)
    - [ 1230 ] importing with '*' from java packages does not work with 2.5b1
    - [ 1242 ] Tuples allow member assignment
    - [ 1239 ] Package scanning seems to depend on import order in jython-2.5b1
    - [ 1235 ] java.awt.Frame - problem w/ attibutes
    - [ 1240 ] Can't import _jython, but it's listed in the built-in modules
    - [ 1217 ] decompressing a malformed stream with zlib results in a java.util.zip.DataFormatException instead of a zlib.error
    - [ 1227 ] The cStringIO.StringIO.write implementation does not handle write/seek/write's correctly.